# lange-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
lange/: __init__.py  __main__.py
lange/cli/: __init__.py  _create.py  _init.py
lange/cli/code/: __init__.py  _stats.py
lange/cli/code/audit/: __init__.py  _command.py  _discovery.py  _runner.py  _types.py
lange/contracts/: __init__.py  ai_model.py  mesh.py  relay.py  worker.py
lange/mesh/: __init__.py  client.py  worker.py
lange/mesh/ai/servers/: __init__.py  llama_cpp.py  mlx_vlm.py
lange/mesh/ai/utils/: download_model.py  get_platform.py
lange/mesh/ai_clients/: __init__.py  cuda.py  mlx_lm.py  mlx_vlm.py
lange/mesh/utils/: body.py  download_model.py  headers.py  name.py  url.py
tests/: manual_mesh_relay_test_local.py  manual_mesh_relay_test_remote.py  test_ai_model_contracts.py  test_cli_build.py  test_cli_code_audit.py  test_cli_code_stats.py  test_cli_create_build.py  test_cli_init.py  test_cli_version.py  test_compute_rest_types.py  test_import_safety.py  test_llama_cpp_server.py  test_manual_mesh_relay_test_remote.py  test_mesh_client_worker.py
tests/benchmarks/: benchmark.py  gemma_4_mlx_vlm.py
tests/benchmarks/data/: chat.json  email.html  manifest.txt
tests/benchmarks/results/: gemma-4-12b-it-mlx-vlm-0.json  gemma-4-12b-it-mlx-vlm-1.json  gemma-4-12b-it-mlx-vlm-2.json
tests/manual/: run_inference_server.py
